Fixed issue on iphone Safari with image too large

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -75,9 +75,7 @@ $gameDetailsHeight: 300px - 30px;
             @include justify-content(flex-start);
 
             .game-image-container {
-                height: calc(95% - 300px) !important;
-                max-height: 300px;
-                min-height: 100px;
+                height: 200px !important;
                 margin-top: 10px;
 
                 .btn-play {
@@ -89,8 +87,7 @@ $gameDetailsHeight: 300px - 30px;
                 }
 
                 .img-lg {
-                    height: 95% !important;
-                    max-height: 95% !important;
+                    height: 200px !important;
                     z-index: 1 !important;
                     margin-right: 0 !important;
                     vertical-align: top;
